@@ -1,3 +1,7 @@
+* Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 1.3.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Wed Dec 02 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.2.1-0
 - Remove EL6 support
 - Fix the main class to work with EL7+
